# LLM-AI-experiments

./: .gitattributes  .gitignore  .gitmodules  README.md
LangGraph_testing/: 00-langgraph-intro.ipynb  README.md  app.py  customerSupport.ipynb  requirements.txt  requirements2.txt
agents/: README.md  app.py  backend.py  pyproject.toml  requirements.txt
agents/gradio_fe/: app.py
agents/gradio_fe/gradio_cached_examples/14/: log.csv
agents/gradio_fe/gradio_cached_examples/15/: log.csv
agents/langchain-academy-main/: pyproject.toml
agents/langchain-academy-main/module-0/: basics.ipynb
agents/langchain-academy-main/module-1/: chain.ipynb  simple-graph.ipynb
agents/src/: 01_Chat.py  02_Model_Selection.py  03_ReAct.py  04_RAG.py  05_qdrant.py  Calculator.py  RAG.py  qdrant_managment.py  streamlit_app.py  test.ipynb
agents/src/RAG/: embeddings.py  ingestion.py  llm_calls.py
agents/src/agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agents/src/libs/: qdrant_lib.py
agents/src/libs/RAG/: chat.py  ell_call.py  embeddings.py  ingestion.py  llm_calls.py  qdrant.py  qdrant_operations.py  text_processing.py
agents/stream_fe/: main.py
agents/stream_fe/pages/: 01_💬_Chat.py  02_🔧_Model_Selection.py
ai_tester_ui/: .~lock.teoria_info.docx#  Hello.py  README.md  grok_models.py  models.json  pyproject.toml  requirements.txt  teoria_info.docx
ai_tester_ui/pages/: 1_wiz.py
ai_tester_ui/src/: utils.py
ai_tester_ui/src/components/: sidebar.py  ui.py
ai_tester_ui/src/modules/: chain.py  model.py  prompt.py
ai_tester_ui/src/rag_libs/: __init__.py
blood_analysis/: README.md  pyproject.toml  requirements.txt
blood_analysis/notebooks/: test.ipynb
blood_analysis/src/: app.py  main.py
blood_analysis/src/blood_analysis/: __init__.py  data_extraction.py  sqlite_blood.py
claude_artifacts/: README.md
claude_test/: cloudera_analysis.py  report.ipynb
gemini/: README.md  gemini_examples.ipynb  gemini_pipelines.py  prompt.py  pyproject.toml  requirements.txt
gemini/src/gemini/: __init__.py
gradio_LLM/: app.py  pyproject.toml  requirements.txt
gradio_LLM/common/: llm.py  vector_db.py
gradio_LLM/src/gradio_llm/: __init__.py
gradio_LLM/subapps/: chatbot.py  chatbot_vector.py  langgraph_agents.py
meeting_doc_gen/: cut_audio.py  requirements.txt  test.ipynb  tets.py  video_to_audio.py
memEDA/: README.md  app.py  memories.json  memories.txt  requirements.txt  streamlit_app.py  test.ipynb  tets2.ipynb
memEDA/libs/: prompts.py
obsidian_sorter/: README.md  app.py  moc_files_list.txt  pyproject.toml  requirements.txt  tag_statistics_home_fd_MEGA_2.json  tag_statistics_home_fd_MEGA_2_KNOWLEDGE.json  tag_statistics_home_fd_MEGA_2_test_tagger.json  tags.py  tags_structure.json
obsidian_sorter/src/obsidian_sorter/: __init__.py  backup_obsidian_vault.py  moc_finder.py  osbidian_tagger.py
openai_test/: pyproject.toml  test.ipynb
openai_test/src/openai_test/: __init__.py
prompt-manager/: package-lock.json  package.json
prompt-manager/app/: page.tsx
prompt-manager/backend/: app.py  init_db.py  schema.sql
prompt-manager/components/: PromptManager.tsx
prompt-manager/prompt-manager-frontend/: package-lock.json  package.json
prompt-manager/prompt-manager-frontend/components/: PromptManager.tsx
prompt-manager/prompts/: coding.py
prompt_manager/: package-lock.json  package.json
prompt_manager/app/: layout.tsx  page.tsx
prompt_manager/app/prompt-manager/: page.tsx
prompt_manager/components/: prompt-manager.tsx  prompt-manager2.tsx
prompt_manager/components/prompt-manager/: Header.tsx  PromptCard.tsx  PromptManager.module.css  Sidebar.tsx  data.ts
twitter_book/: README.md  gemini.py  gmail_extraction.ipynb  pyproject.toml  requirements.txt  test.ipynb
twitter_book/notebooks/: gmail_extraction.ipynb
twitter_book/src/twitter_book/: __init__.py  gemini_processing.py
youtube/: llm.py  main.ipynb  prompt.py  pyproject.toml  requirements.txt  streamlit_app.py  test_yt.ipynb  youtube_downloader.py
youtube/src/youtube/: __init__.py  transcription_processor.py  youtube_downloader.py
youtube_dub/: test_yt.ipynb  youtube_downloader  youtube_downloader.py  yt_prep.py
youtube_dub/media/: Breaking Down & Testing FIVE LLM Agent Architectures - (Reflexion, LATs, P&E, ReWOO, LLMCompiler).info.json  Breaking_Down__Testing_FIVE_LLM_Agent_Architectures_-_Reflexion_LATs_PE_ReWOO_LLMCompiler_chapters.json
