[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ell-ai>=0.0.6",
    "gradio>=4.44.0",
    "langfuse>=2.50.2",
    "langgraph>=0.2.23",
    "langsmith>=0.1.125",
    "openai>=1.47.0",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.11.2",
    "streamlit>=1.38.0",
    "tavily-python>=0.5.0",
]
