[project]
name = "ai-tester-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit==1.38.0",
    "tavily-python==0.3.5",
    "langfuse==2.39.2",
    "streamlit-feedback==0.1.3",
    "langchain-community>=0.2.15",
    "langchain-core>=0.2.37",
    "langchain-text-splitters>=0.2.2",
    "langchain-openai>=0.1.23",
    "qdrant-client==1.10.1",
    "fastembed==0.3.6",
    "pypdf2>=3.0.1",
    "langchain-groq>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
