[project]
name = "obsidian-sorter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "vertexai>=1.63.0",
    "litellm>=1.46.0",
    "pyyaml>=6.0.2",
    "streamlit>=1.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
