[project]
name = "twitter-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-aiplatform>=1.63.0",
    "vertexai>=1.63.0",
    "google-api-python-client>=2.142.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
